# jams

./: LICENSE  README.md  pyproject.toml
demos/: mixture.ipynb
jams/: adapt.py  helpers.py  sampling.py
tests/: test_integ_adapt.py  test_integ_sampling.py  test_unit_helpers.py
