[tool.poetry]
name = "jams"
version = "0.1.0"
description = ""
authors = ["tim.sf <timstf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.12.0"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
pytest = "^8.1.1"
jupyter = "^1.0.0"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
